# parallelprimitives

./: CMakeLists.txt  Makefile  README.md  bulk.cuh  config.cuh  constants.cuh  gpuvector.cuh  indices  iterators.cuh  main.cu  merge.cuh  operators.cuh  partition.cuh  perf.cuh  perf.h  reduce.cuh  scan.cuh  test_reduction.cu  traits.cuh  unary.cuh  utils.cuh
include/: gemm.cuh  gpumatrix.hpp  gpuvector.hpp  histogram.cuh  operators.cuh  reduce.cuh  scan.cuh
src/: test_reduction.cu  test_scan.cu  test_unary.cu
test/: perf.h  test_gemm.cu  test_histogram.cu  test_reduction.cu  test_scan.cu
